--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-<!--navbar-->
+<!-- old 
 <ul class="nav justify-content-end">
         <li class="nav-item">
           <a class="nav-link" href="#">Welcome</a>
@@ -30,9 +30,29 @@
         </li>
     </div>
       </ul>
+navbar-->
 
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
-
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#collapse_target"><span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="collapse_target">
+    <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="#">Welcome</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#portfolio">Work</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#aboutme">About</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contactinformation">Contact</a>
+        </li>
+    </ul>
+  </div>
+</nav>
 
 <!--jumbotron-->
 <div class="jumbotron">
@@ -44,8 +64,9 @@
       </div>
     </div>
 <div class="background">
+  <a id="portfolio">
 <h2>WELCOME TO MY PORTFOLIO</h2>
-
+  </a>
 <!--cards-->
 
 <div class="row1">
@@ -97,18 +118,20 @@
 <!--about/contact-->
 <div class="jumbotron2">
     <div class="headshot">
+        <a id="aboutme">
         <img src="images/header.png"></div>
+      </a>
         <div class="contact-about">
         <div class="background3">
+          <a id="contactinformation">
         <h3>About/Contact</h3>
+      </a>
         <p class="about-contact-info">Designer with a penchant for storytelling and gaming. Crafting creative solutions for meaningful experiences</p>
         <div class="contact-info">
-        <ul>
-            <li>bustos.julian@yahoo.com</li>
-            <li>(714)351-1918</li>
-        </ul>
+      bustos.julian@yahoo.com<br>
+      (714)351-1918
+        
     </div>
-        <a class="btn btn-primary btn-lg" href="https://www.linkedin.com/in/julian-bustos-34186042/" role="button">Let's LinkedIn</a>
       </div>
     </div>
 </div>
